Archive2/4c/22f2d4197a0075/output
main.cpp:14:43: error: invalid use of incomplete type 'class X<Type, M, N, std::array<Type, (M * N)> >'
 X<Type, M, N, std::array<Type, M * N>>::X() {
                                           ^
main.cpp:6:7: error: declaration of 'class X<Type, M, N, std::array<Type, (M * N)> >'
 class X {
       ^
